------------
-- 2.0.10 --
------------

* GUI:
	* a workaroud for right ISO format detection was added (#271677)
	* languages list was updated to karmic
	
* Backend:	
	* dbus-uuidgen support was added if available

-----------
-- 2.0.9 --
-----------

* GUI:
	* If you don't select a language pack to install, you're not asked
	  to choose what desktop manager is installed in the ISO
	* Some messages referring to currently installed distro codename
	  were made dynamic
	* If an error happens calling running console application UCK
	  tries to run the fallback xterm

* Backend:
	* No error is thrown if no language packs are going to be installed
	* No language packs are removed from the rootfs if you don't provide
	  at least a language pack to install (otherwise you'll have an ISO
	  with no languages at all)
	* No language selection are removed from gfxboot if you don't choose
	  at least a language pack to install
	* If you don't choose a default boot language UCK does not pass a
	  DEFAULT_LANG variable when rebuilding gfxboot, this won't modify
	  gfxboot default
	* No warning are thrown if "remove_win32_files" file is not present 
	  in the remastering scripts directory
	* a bug with the kernel image selection was solved (now the latest
	  is always selected automatically) (thanks to Dion Stempfley)
	* the way we retrive gfxboot-theme-ubuntu was rewritten using bazaar
	  (the official ubuntu development tool)
	* /var/run was added to the pseudo filesystem that are mounted in
	  the chroot environment
	* all previously mounted pseudo filesystems are now unmounted
	  before starting the remastering process if a previous
	  remaster-root directory exists

-----------
-- 2.0.8 --
-----------

* Package:
	* every uck-* binary file now has a man page (docs/man)
	* no need to remove the debian/ dir from upstream tarball
	* uck-* binaries moved from /usr/share/uck to /usr/bin

-----------
-- 2.0.7 --
-----------

* Package: